# starburst

./: .gitignore  .gitmodules  LICENSE  README.md  artifact_eval.sh  build.sh  cope.py  dockerfile  experiments.sh  figures.sh  job.py  lol.sh  main.py  nsdi.sh  problem_v1.ipynb  pyproject.toml  requirements.txt  run_simulator.py  run_simulator_sweep.py  setup.py  skypilot.yaml  task_lists.md  test.sh  utils.py
real_scripts/: cache-images.sh  constant-wait.sh  no-wait.sh  starburst-note.sh  starburst.sh
simulator_scripts/: appendix.sh  fig10.sh  fig11.sh  fig12.sh  fig13.sh  fig14.sh  fig15.sh  fig7.sh  fig8.sh  fig9.sh
simulators/: background_figs.ipynb  empty-space-analysis.ipynb  eval_figs.ipynb  eval_pareto_curves.ipynb  eval_real_life_sim.ipynb  figures-motivate_waiting.ipynb  motivation_figs.ipynb  optimal_solver.ipynb  pareto_curves.ipynb  plot.ipynb  plot_continuous_new.ipynb  plot_timeout_policies.ipynb  problem_v2.ipynb  problem_v3.ipynb  problem_v4-backfill.ipynb  problem_v4.ipynb  rebuttal.ipynb  sec2-backgroud-figures.ipynb  sec5.3-analysis.ipynb  simulator.ipynb  simulator_v0.ipynb  synthetic_plots.ipynb
skyburst/: __init__.py  cluster.py  filter_config.py  job.py  job_generator.py  node.py  plot.py  simulator.py  utils.py  waiting_policy.py
task_yamls/: pytorch-cifar10-resnet50.yaml  pytorch-mnist.py.yaml
tasks/: README.md  huggingface-bert-mini-wikitext103-1epoch.sh  huggingface-bert-mini-wikitext2-1epoch.sh  huggingface-bert-mini-wmt16-1epoch.sh  huggingface-bert-small-wikitext103-1epoch.sh  huggingface-bert-small-wikitext2-1epoch.sh  (+51 more)
(+99 files in other folders)
